# taskforge

./: .gitignore  .goreleaser.yml  .licensure.yml  .pylintrc  .travis.yml  .vale.ini  CODE_OF_CODUCT.rst  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile.website  Makefile  README.md  glide.yaml  go.mod  go.sum  main.go  pytest.ini  requirements.dev.txt  setup.cfg  setup.py  tox.ini
backends/: backend.go  backend_test.go  file.go  file_test.go  mongo.go
cmd/task/: main.go
commands/: commands.go  complete.go  config.go  edit.go  new.go  next.go  query.go
docs/: CNAME  api.html  configuring_taskforge.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  query_language.html  search.html  searchindex.js  taskforge.cli.html  taskforge.html  taskforge.lists.html  taskforge.ql.html  taskforge.task.html
list/: file.go  file_test.go  list.go  list_test.go  mongo.go  mongo_test.go  server.go  server_test.go
server/: list.go  listApi.go  server.go  taskApi.go
src/: config.rs  lib.rs  main.rs
task/: Cargo.toml  list.go  list_test.go  task.go  task_test.go
taskforge/: task.py
taskhero/: Cargo.toml
tests/: list_utils.py  test_mongo_list.py  test_sqlite_list.py  test_task.py
tsk/: Cargo.toml
tsk/src/: config.rs  main.rs
tsk/src/commands/: complete.rs  mod.rs  new.rs  query.rs  show.rs
tsk_lib/: Cargo.toml
tsk_lib/src/: backend.rs  lib.rs  list.rs  task.rs  temp.rs
tsk_lib/src/backends/: backend.rs  file.rs  mod.rs
tsk_lib/src/query/: ast.rs  lexer.rs  mod.rs  parser.rs  tokens.rs
tsk_lib/src/tasks/: list.rs  task.rs
(+202 files in other folders)
