[package]
name = "tsk"
version = "0.0.0"
authors = ["Mathew Robinson <chasinglogic@gmail.com>"]
keywords = ["productivity", "todo", "cli", "tool"]
license = "GPL-3.0"
readme = "../README.md"
description = "Task management cli."

[dependencies]
tsk_lib = { path = "../tsk_lib", version = "0.0.0" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
toml = "0.4"
